<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.result.ResultFragment">

    <ScrollView
        android:id="@+id/result_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ResultFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/medium_space"
            android:paddingEnd="@dimen/medium_space">

            <TextView
                android:id="@+id/result_final_amount_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_space"
                android:gravity="center_horizontal"
                android:text="@string/result_result_label"
                android:textSize="@dimen/p1_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result_final_amount_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/h1_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/result_final_amount_label" />

            <TextView
                android:id="@+id/result_final_profit_amount_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/result_final_profit_label"
                android:textSize="@dimen/p1_text_size"
                app:layout_constraintEnd_toStartOf="@id/result_final_profit_amount_value"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/result_final_amount_value" />

            <TextView
                android:id="@+id/result_final_profit_amount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/small_space"
                android:textColor="@color/teal_200"
                android:textSize="@dimen/p1_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/result_final_profit_amount_label"
                app:layout_constraintTop_toBottomOf="@id/result_final_amount_value" />

            <TextView
                android:id="@+id/result_initial_amount_label"
                style="@style/result_label_text_view"
                android:layout_marginTop="@dimen/large_space"
                android:text="@string/result_initial_applied_label"
                app:layout_constraintEnd_toStartOf="@id/result_initial_amount_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/result_final_profit_amount_label" />

            <TextView
                android:id="@+id/result_initial_amount_value"
                style="@style/result_value_text_view"
                android:layout_marginTop="@dimen/large_space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/result_initial_amount_label"
                app:layout_constraintTop_toBottomOf="@id/result_final_profit_amount_label" />

            <TextView
                android:id="@+id/result_gross_amount_label"
                style="@style/result_label_text_view"
                android:text="@string/result_gross_invesment_amount_label"
                app:layout_constraintEnd_toStartOf="@id/result_gross_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_initial_amount_label" />

            <TextView
                android:id="@+id/result_gross_value"
                style="@style/result_value_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/result_gross_amount_label"
                app:layout_constraintTop_toBottomOf="@+id/result_initial_amount_label" />

            <TextView
                android:id="@+id/result_profit_amount_label"
                style="@style/result_label_text_view"
                android:text="@string/result_profit_amount_label"
                app:layout_constraintEnd_toStartOf="@id/result_profit_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_gross_amount_label" />

            <TextView
                android:id="@+id/result_profit_value"
                style="@style/result_value_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/result_profit_amount_label"
                app:layout_constraintTop_toBottomOf="@+id/result_gross_amount_label" />

            <TextView
                android:id="@+id/result_taxes_amount_label"
                style="@style/result_label_text_view"
                android:text="@string/result_taxes_amount_label"
                app:layout_constraintEnd_toStartOf="@id/result_taxes_amount_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_profit_amount_label" />

            <TextView
                android:id="@+id/result_taxes_amount_value"
                style="@style/result_value_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/result_taxes_amount_label"
                app:layout_constraintTop_toBottomOf="@+id/result_profit_amount_label" />

            <TextView
                android:id="@+id/result_net_amount_label"
                style="@style/result_label_text_view"
                android:text="@string/result_net_amount_label"
                app:layout_constraintEnd_toStartOf="@id/result_net_amount_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_taxes_amount_label" />

            <TextView
                android:id="@+id/result_net_amount_value"
                style="@style/result_value_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/result_net_amount_label"
                app:layout_constraintTop_toBottomOf="@+id/result_taxes_amount_label" />

            <TextView
                android:id="@+id/result_maturity_date_label"
                style="@style/result_label_text_view"
                android:layout_marginTop="@dimen/large_space"
                android:text="@string/result_maturity_date_label"
                app:layout_constraintEnd_toStartOf="@id/result_maturity_date_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_net_amount_label" />

            <TextView
                android:id="@+id/result_maturity_date_value"
                style="@style/result_value_text_view"
                android:layout_marginTop="@dimen/large_space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/result_maturity_date_label"
                app:layout_constraintTop_toBottomOf="@+id/result_net_amount_label" />

            <TextView
                android:id="@+id/result_maturity_days_label"
                style="@style/result_label_text_view"
                android:text="@string/result_maturity_days_label"
                app:layout_constraintEnd_toStartOf="@id/result_maturity_days_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_maturity_date_label" />

            <TextView
                android:id="@+id/result_maturity_days_value"
                style="@style/result_value_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/result_maturity_days_label"
                app:layout_constraintTop_toBottomOf="@+id/result_maturity_date_label" />

            <TextView
                android:id="@+id/result_monthly_profit_label"
                style="@style/result_label_text_view"
                android:text="@string/result_monthly_profit_label"
                app:layout_constraintEnd_toStartOf="@id/result_monthly_profit_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_maturity_days_label" />

            <TextView
                android:id="@+id/result_monthly_profit_value"
                style="@style/result_value_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/result_monthly_profit_label"
                app:layout_constraintTop_toBottomOf="@+id/result_maturity_days_label" />

            <TextView
                android:id="@+id/result_rate_label"
                style="@style/result_label_text_view"
                android:text="@string/result_rate_label"
                app:layout_constraintEnd_toStartOf="@id/result_rate_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_monthly_profit_label" />

            <TextView
                android:id="@+id/result_rate_value"
                style="@style/result_value_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/result_rate_label"
                app:layout_constraintTop_toBottomOf="@+id/result_monthly_profit_label" />

            <TextView
                android:id="@+id/result_annual_profit_label"
                style="@style/result_label_text_view"
                android:text="@string/result_annual_profit_label"
                app:layout_constraintEnd_toStartOf="@id/result_annual_profit_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_rate_label" />

            <TextView
                android:id="@+id/result_annual_profit_value"
                style="@style/result_value_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/result_annual_profit_label"
                app:layout_constraintTop_toBottomOf="@+id/result_rate_label" />

            <TextView
                android:id="@+id/result_period_profit_label"
                style="@style/result_label_text_view"
                android:text="@string/result_period_profit_label"
                app:layout_constraintEnd_toStartOf="@id/result_period_profit_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_annual_profit_label" />

            <TextView
                android:id="@+id/result_period_profit_value"
                style="@style/result_value_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/result_period_profit_label"
                app:layout_constraintTop_toBottomOf="@+id/result_annual_profit_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/result_result_simulate_again_btn"
        style="@style/common_material_button"
        android:layout_marginStart="@dimen/medium_space"
        android:layout_marginEnd="@dimen/medium_space"
        android:layout_marginBottom="@dimen/large_space"
        android:text="@string/result_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>